--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "repository": {
     "type": "git"
   },
-  "author": "",
+  "author": "blueazurite",
   "license": "ISC",
   "dependencies": {
     "express": "^4.14.0",
