--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "devDependencies": {
     "babel-cli": "^6.11.4",
     "babel-preset-es2015": "^6.9.0",
-    "babel-preset-stage-1": "^6.5.0"
+    "babel-preset-stage-1": "^6.5.0",
+    "webpack": "^1.13.1"
   }
 }
