/chores added npm prod:buildserver script to package.json and updated gitignore to ignore server-dist.

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,11 @@
-# Dependency directorys
+# Dependency directories
 node_modules/
 bower_components/
+
+# Compiled files
 compiled/
+server-dist/
+
+# Logs
+logs
+*.log
