--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "prod:buildclient": "webpack",
     "prod:buildserver": "babel ./server -d ./server-dist --presets es2015,stage-2 --copy-files",
-    "dev:start": "nodemon ./server/app.js --exec babel-node --presets es2015,stage-1",
+    "dev:start": "nodemon ./server/app.js --exec babel-node --presets es2015,stage-2",
     "dev:webpack": "webpack --watch",
     "dev:fullstart": "npm run dev:start & npm run dev:webpack"
   },
@@ -32,6 +32,7 @@
     "babel-preset-es2015": "^6.13.2",
     "babel-preset-react": "^6.11.1",
     "babel-preset-stage-1": "^6.5.0",
+    "babel-preset-stage-2": "^6.13.0",
     "webpack": "^1.13.1"
   }
 }
