--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "react-dom": "^15.3.0",
     "react-redux": "^4.4.5",
     "redux": "^3.5.2",
-    "redux-promise": "^0.5.3"
+    "redux-promise": "^0.5.3",
+    "socket.io": "^1.4.8"
   },
   "devDependencies": {
     "babel-cli": "^6.11.4",
