--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "react-redux": "^4.4.5",
     "redux": "^3.5.2",
     "redux-promise": "^0.5.3",
-    "socket.io": "^1.4.8"
+    "socket.io": "^1.4.8",
+    "redux-thunk": "^2.1.0"
   },
   "devDependencies": {
     "babel-cli": "^6.11.4",
