chores/ add react-copy-to-clipboard to package.json

--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "mongoose": "^4.5.8",
     "react": "^15.3.0",
     "react-ace": "^3.5.0",
+    "react-copy-to-clipboard": "^4.2.2",
     "react-dom": "^15.3.0",
     "react-redux": "^4.4.5",
     "redux": "^3.5.2",
