--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "eslint-plugin-react": "^6.0.0",
     "express": "^4.14.0",
     "mongoose": "^4.5.8",
+    "nodegit": "^0.14.1",
     "react": "^15.3.0",
     "react-ace": "^3.5.0",
     "react-copy-to-clipboard": "^4.2.2",
