--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-ace": "^3.5.0",
     "react-copy-to-clipboard": "^4.2.2",
     "react-dom": "^15.3.0",
+    "react-keydown": "^1.6.2",
     "react-redux": "^4.4.5",
     "redux": "^3.5.2",
     "redux-promise": "^0.5.3",
