--- a/package.json
+++ b/package.json
@@ -19,12 +19,17 @@
     "axios": "^0.13.1",
     "babel-loader": "^6.2.4",
     "bluebird": "^3.4.1",
+    "body-parser": "^1.15.2",
     "brace": "^0.8.0",
     "eslint": "^3.2.2",
     "eslint-plugin-react": "^6.0.0",
     "express": "^4.14.0",
+    "express-session": "^1.14.0",
     "mongoose": "^4.5.8",
     "nodegit": "^0.14.1",
+    "passport": "^0.3.2",
+    "passport-github2": "^0.1.10",
+    "querystring": "^0.2.0",
     "react": "^15.3.0",
     "react-ace": "^3.5.0",
     "react-copy-to-clipboard": "^4.2.2",
@@ -33,6 +38,7 @@
     "react-redux": "^4.4.5",
     "redux": "^3.5.2",
     "redux-promise": "^0.5.3",
+    "request": "^2.74.0",
     "socket.io": "^1.4.8",
     "socket.io-client": "^1.4.8"
   },
