--- a/package.json
+++ b/package.json
@@ -34,10 +34,10 @@
     "react-ace": "^3.5.0",
     "react-copy-to-clipboard": "^4.2.2",
     "react-dom": "^15.3.0",
-    "react-keydown": "^1.6.2",
     "react-redux": "^4.4.5",
     "redux": "^3.5.2",
     "redux-promise": "^0.5.3",
+    "replit-client": "^0.6.0",
     "request": "^2.74.0",
     "socket.io": "^1.4.8",
     "socket.io-client": "^1.4.8"
