--- a/package.json
+++ b/package.json
@@ -21,11 +21,14 @@
     "bluebird": "^3.4.1",
     "body-parser": "^1.15.2",
     "brace": "^0.8.0",
+    "es6-promise": "^3.2.1",
     "eslint": "^3.2.2",
     "eslint-plugin-react": "^6.0.0",
     "express": "^4.14.0",
     "express-session": "^1.14.0",
+    "isomorphic-fetch": "^2.2.1",
     "mongoose": "^4.5.8",
+    "node-fetch": "^1.6.0",
     "nodegit": "^0.14.1",
     "passport": "^0.3.2",
     "passport-github2": "^0.1.10",
