--- a/package.json
+++ b/package.json
@@ -43,9 +43,7 @@
     "redux-promise": "^0.5.3",
     "request": "^2.74.0",
     "socket.io": "^1.4.8",
-    "socket.io-client": "^1.4.8"
-  },
-  "devDependencies": {
+    "socket.io-client": "^1.4.8",
     "babel-cli": "^6.11.4",
     "babel-core": "^6.13.2",
     "babel-loader": "^6.2.4",
