--- a/package.json
+++ b/package.json
@@ -51,7 +51,16 @@
     "redux-promise": "^0.5.3",
     "request": "^2.74.0",
     "socket.io": "^1.4.8",
-    "socket.io-client": "^1.4.8",
-    "webpack": "^1.13.1"
+    "socket.io-client": "^1.4.8"
+  },
+  "devDependencies": {
+    "babel-cli": "^6.11.4",
+    "babel-core": "^6.13.2",
+    "babel-loader": "^6.2.4",
+    "babel-preset-es2015": "^6.13.2",
+    "babel-preset-react": "^6.11.1",
+    "babel-preset-stage-1": "^6.5.0",
+    "babel-preset-stage-2": "^6.13.0",
+    "react-hot-loader": "^1.3.0"
   }
 }
