--- a/package.json
+++ b/package.json
@@ -19,7 +19,13 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^0.13.1",
+    "babel-cli": "^6.11.4",
+    "babel-core": "^6.13.2",
     "babel-loader": "^6.2.4",
+    "babel-preset-es2015": "^6.13.2",
+    "babel-preset-react": "^6.11.1",
+    "babel-preset-stage-1": "^6.5.0",
+    "babel-preset-stage-2": "^6.13.0",
     "bluebird": "^3.4.1",
     "body-parser": "^1.15.2",
     "brace": "^0.8.0",
@@ -28,6 +34,7 @@
     "eslint-plugin-react": "^6.0.0",
     "express": "^4.14.0",
     "express-session": "^1.14.0",
+    "getscreenmedia": "^1.5.4",
     "isomorphic-fetch": "^2.2.1",
     "mongoose": "^4.5.8",
     "node-fetch": "^1.6.0",
@@ -45,13 +52,6 @@
     "request": "^2.74.0",
     "socket.io": "^1.4.8",
     "socket.io-client": "^1.4.8",
-    "babel-cli": "^6.11.4",
-    "babel-core": "^6.13.2",
-    "babel-loader": "^6.2.4",
-    "babel-preset-es2015": "^6.13.2",
-    "babel-preset-react": "^6.11.1",
-    "babel-preset-stage-1": "^6.5.0",
-    "babel-preset-stage-2": "^6.13.0",
     "webpack": "^1.13.1"
   }
 }
