--- a/package.json
+++ b/package.json
@@ -29,12 +29,14 @@
     "bluebird": "^3.4.1",
     "body-parser": "^1.15.2",
     "brace": "^0.8.0",
+    "compression": "^1.6.2",
     "es6-promise": "^3.2.1",
     "eslint": "^3.2.2",
     "eslint-plugin-react": "^6.0.0",
     "express": "^4.14.0",
     "express-session": "^1.14.0",
     "getscreenmedia": "^1.5.4",
+    "if-env": "^1.0.0",
     "isomorphic-fetch": "^2.2.1",
     "mongoose": "^4.5.8",
     "node-fetch": "^1.6.0",
@@ -47,6 +49,7 @@
     "react-copy-to-clipboard": "^4.2.2",
     "react-dom": "^15.3.0",
     "react-redux": "^4.4.5",
+    "react-router": "^2.7.0",
     "redux": "^3.5.2",
     "redux-promise": "^0.5.3",
     "request": "^2.74.0",
