--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "redux-promise": "^0.5.3",
     "request": "^2.74.0",
     "socket.io": "^1.4.8",
-    "socket.io-client": "^1.4.8"
+    "socket.io-client": "^1.4.8",
+    "webpack": "^1.13.2"
   }
 }
