--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "react-dom": "^15.3.0",
     "react-redux": "^4.4.5",
     "react-router": "^2.7.0",
+    "redis": "^2.6.2",
     "redux": "^3.5.2",
     "redux-promise": "^0.5.3",
     "request": "^2.74.0",
