--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "babel-preset-stage-2": "^6.13.0",
     "bluebird": "^3.4.1",
     "body-parser": "^1.15.2",
+    "bootbox": "^4.4.0",
     "brace": "^0.8.0",
     "compression": "^1.6.2",
     "es6-promise": "^3.2.1",
