--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "start": "node ./server-dist/app.js",
+    "start": "npm run prod:buildserver & npm run prod:buildclient & node ./server-dist/app.js",
     "postinstall": "npm run prod:buildserver & npm run prod:buildclient",
     "prod:buildclient": "webpack",
     "prod:buildserver": "babel ./server -d ./server-dist --presets es2015,stage-2 --copy-files",
@@ -51,7 +51,6 @@
     "react-dom": "^15.3.0",
     "react-redux": "^4.4.5",
     "react-router": "^2.7.0",
-    "redis": "^2.6.2",
     "redux": "^3.5.2",
     "redux-promise": "^0.5.3",
     "request": "^2.74.0",
