--- a/package.json
+++ b/package.json
@@ -44,9 +44,11 @@
     "node-fetch": "^1.6.0",
     "passport": "^0.3.2",
     "passport-github2": "^0.1.10",
+    "peer": "^0.2.8",
     "querystring": "^0.2.0",
     "react": "^15.3.0",
     "react-ace": "^3.5.0",
+    "react-burger-menu": "^1.10.4",
     "react-copy-to-clipboard": "^4.2.2",
     "react-dom": "^15.3.0",
     "react-redux": "^4.4.5",
